--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [alias]
-    # View abbreviated SHA, description, history graph, time and author
-    l = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --
+    # View abbreviated SHA, description, and history graph of the latest 20 commits
+    l = log --pretty=oneline -n 20 --graph --abbrev-commit
     # View the current working tree status using the short format
     s = status -s
     # Show the diff between the latest commit and the current state
